--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Website</title>
+
+  <meta charset="UTF-8">
+  <title>MindMap</title>
+  <link type="text/css" href="mindmap.css" rel="stylesheet">
+
 </head>
+
 <body>
+  <h1>MindMap</h1>
 
+  <div id="container"></div>
 
-    <h1>H1</h1>
-    <p> This is a paragraf</p>
+  <script type="text/javascript" src="mindmap.js"></script>
+
 </body>
+
 </html>
